--- a/index.html
+++ b/index.html
@@ -1,49 +1,105 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nikhil Chavan | Data Analyst Portfolio</title>
   <style>
-    body { font-family: Arial, sans-serif; background-color: #f4f4f4; padding: 40px; }
-    h1 { color: #333; }
-    a { color: #007acc; text-decoration: none; }
-    section { margin-bottom: 40px; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background-color: #1f2937;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    nav {
+      text-align: center;
+      background: #111827;
+      padding: 1rem;
+    }
+    nav a {
+      color: #d1d5db;
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    nav a:hover {
+      color: #facc15;
+    }
+    .container {
+      padding: 2rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .project {
+      background: white;
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    .project h3 {
+      margin-top: 0;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background-color: #1f2937;
+      color: white;
+    }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Nikhil Chavan</h1>
+    <p>Data Analyst | SQL • Power BI • Excel</p>
+  </header>
 
-  <h1>👋 Hi, I'm Nikhil Chavan</h1>
-  <p>I’m a data analyst passionate about turning raw data into actionable insights using Power BI, SQL, and Excel.</p>
+  <nav>
+    <a href="#projects">Projects</a>
+    <a href="#resume">Resume</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-  <section>
-    <h2>📊 Featured Project</h2>
-    <ul>
-      <li>
-        <a href="https://github.com/Niks23c/Pizza-Sales-Analysis-SQL-PowerBI-" target="_blank">
-          🍕 Pizza Sales Analysis (SQL + Power BI)
-        </a>
+  <div class="container">
+    <section id="projects">
+      <h2>📊 Featured Project</h2>
+      <div class="project">
+        <h3>🍕 Pizza Sales Analysis (SQL + Power BI)</h3>
         <p>
-          An end-to-end sales dashboard project analyzing a pizza shop’s performance. KPIs include total revenue, average order value, category-wise sales, and top/bottom-selling pizzas.
+          Analyzed pizza shop sales using SQL and Power BI to extract KPIs, ordering trends, and product performance.
         </p>
-      </li>
-    </ul>
-  </section>
+        <a href="https://github.com/Niks23c/Pizza-Sales-Analysis-SQL-PowerBI-" target="_blank">View Project on GitHub →</a>
+      </div>
+      <!-- Add more projects later -->
+    </section>
 
-  <section>
-    <h2>📄 Resume</h2>
-    <p>
-      <a href="https://github.com/nikhilcaptain4/Nikhil_Resume_2025/blob/main/Nikhil_Resume_2025.pdf" target="_blank">
-        📥 Download My Resume
-      </a>
-    </p>
-  </section>
+    <section id="resume">
+      <h2>📄 Resume</h2>
+      <p>
+        <a href="https://github.com/nikhilcaptain4/Nikhil_Resume_2025/blob/main/Nikhil_Resume_2025.pdf" target="_blank">
+          📥 Download My Resume
+        </a>
+      </p>
+    </section>
 
-  <section>
-    <h2>📬 Contact</h2>
-    <ul>
-      <li>Email: <a href="mailto:nikhilcaptain4@gmail.com">nikhilcaptain4@gmail.com</a></li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/nikhil-c-993548151" target="_blank">linkedin.com/in/nikhil-c</a></li>
-    </ul>
-  </section>
+    <section id="contact">
+      <h2>📬 Contact</h2>
+      <ul>
+        <li>Email: <a href="mailto:nikhilcaptain4@gmail.com">nikhilcaptain4@gmail.com</a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/nikhil-c-993548151" target="_blank">linkedin.com/in/nikhil-c</a></li>
+      </ul>
+    </section>
+  </div>
 
+  <footer>
+    <p>© 2025 Nikhil Chavan. All rights reserved.</p>
+  </footer>
 </body>
 </html>
