--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
     <a href="#resume">Resume</a>
     <a href="#contact">Contact</a>
   </nav>
+<div class="project">
+  <h3>🍕 Pizza Sales Analysis (SQL + Power BI)</h3>
 
-  <div class="container">
-    <section id="projects">
-      <h2>📊 Featured Project</h2>
-      <div class="project">
-        <h3>🍕 Pizza Sales Analysis (SQL + Power BI)</h3>
-        <img src="assets/pizza_dashboard.gif" alt="Pizza Dashboard Demo GIF">
-        <img src="assets/pizza_screenshot.png" alt="Pizza Dashboard Screenshot">
-        <p>
-          Analyzed pizza shop sales using SQL and Power BI to extract KPIs, ordering trends, and product performance.
-        </p>
-        <a href="https://github.com/Niks23c/Pizza-Sales-Analysis-SQL-PowerBI-" target="_blank">View Project on GitHub →</a>
-      </div>
+  <!-- Correct image and GIF filenames -->
+  <img src="assets/pizza_dashboard.gif" alt="Pizza Dashboard Demo GIF">
+  <img src="assets/pizza1.png" alt="Pizza Screenshot 1">
+  <img src="assets/Pizza2.png" alt="Pizza Screenshot 2">
+
+  <p>
+    Analyzed pizza shop sales using SQL and Power BI to extract KPIs, ordering trends, and product performance.
+  </p>
+  <a href="https://github.com/Niks23c/Pizza-Sales-Analysis-SQL-PowerBI-" target="_blank">View Project on GitHub →</a>
+</div>
     </section>
 
     <section id="resume">
