--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <h3>🍕 Pizza Sales Analysis (SQL + Power BI)</h3>
 
   <!-- Correct image and GIF filenames -->
-  <img src="assets/pizza_dashboard.gif" alt="Pizza Dashboard Demo GIF">
+  <img src="assets/PIZZA.gif" alt="Pizza Dashboard Demo GIF">
   <img src="assets/pizza1.png" alt="Pizza Screenshot 1">
   <img src="assets/Pizza2.png" alt="Pizza Screenshot 2">
 
