--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
   <header>
     <h1>Nikhil Chavan</h1>
-    <p>Data Analyst | SQL • Power BI • Excel</p>
+    <p>Data Analyst | SQL • Power BI • Excel • Python</p>
   </header>
 
   <nav>
