--- a/index.html
+++ b/index.html
@@ -72,9 +72,14 @@
 </head>
 <body>
   <header>
-    <h1>Nikhil Chavan</h1>
-    <p>Data Analyst | SQL • Power BI • Excel • Python</p>
-  </header>
+  <div style="display: flex; align-items: center; justify-content: center; gap: 1rem; flex-wrap: wrap;">
+    <img src="assets/profile.jpg" alt="Profile Photo" style="width: 100px; height: 100px; border-radius: 50%; border: 2px solid #facc15;" />
+    <div>
+      <h1 style="margin: 0;">Nikhil Chavan</h1>
+      <p style="margin: 0;">Data Analyst | SQL • Power BI • Excel • Python</p>
+    </div>
+  </div>
+</header>
 
   <nav>
     <a href="#projects">Projects</a>
