--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <section id="resume">
       <h2>📄 Resume</h2>
       <p>
-        <a href="https://github.com/nikhilcaptain4/Nikhil_Resume_2025/blob/main/Nikhil_Resume_2025.pdf" target="_blank">
+        <a href="assets/Nikhil_Resume_2025.pdf" target="_blank">
           📥 Download My Resume
         </a>
       </p>
