--- a/pizza.html
+++ b/pizza.html
@@ -85,10 +85,10 @@
 
     <hr>
 
-    <h2>📊 Dashboard Preview</h2>
-    <img src="Screenshots/PIZZA.gif" alt="Pizza Sales Dashboard GIF">
-    <img src="Screenshots/pizza1.png" alt="Pizza Sales Screenshot 1">
-    <img src="Screenshots/Pizza2.png" alt="Pizza Sales Screenshot 2">
+<h2>📊 Dashboard Preview</h2>
+<img src="Screenshots/Pizza.gif" alt="Pizza Sales Dashboard GIF">
+<img src="Screenshots/Pizza1.png" alt="Pizza Sales Screenshot 1">
+<img src="Screenshots/Pizza2.png" alt="Pizza Sales Screenshot 2">
 
     <hr>
 
