--- a/pizza.html
+++ b/pizza.html
@@ -86,10 +86,9 @@
     <hr>
 
     <h2>📊 Dashboard Preview</h2>
-    <img src="Screenshots/Pizza.gif" alt="Pizza Sales Dashboard GIF">
-    <img src="Screenshots/Pizza1.png" alt="Pizza Sales Screenshot 1">
-    <img src="Screenshots/Pizza2.png" alt="Pizza Sales Screenshot 2">
-
+    <img src="assets/Pizza.gif" alt="Pizza Sales Dashboard GIF">
+    <img src="assets/Pizza1.png" alt="Pizza Sales Screenshot 1">
+    <img src="assets/Pizza2.png" alt="Pizza Sales Screenshot 2">
     <hr>
 
     <h2>📈 KPIs</h2>
