--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <!-- Pizza Project Card -->
         <div class="project-card">
           <h3>🍕 Pizza Sales Analysis</h3>
-          <img src="assets/PIZZA.gif" alt="Pizza Dashboard GIF">
+          <img src="assets/Pizza.gif" alt="Pizza Dashboard GIF">
           <p>
             Analyzed pizza shop sales using SQL and Power BI to extract KPIs, ordering trends, and product performance.
           </p>
