--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </header>
 
   <nav>
-    <a href="#projects">Projects</a>
+    <a href="projects.html">Projects</a>
     <a href="#resume">Resume</a>
     <a href="#contact">Contact</a>
   </nav>
