--- a/index.html
+++ b/index.html
@@ -94,12 +94,15 @@
     <section id="achievements">
       <h2>🏆 Achievements</h2>
       <ul>
-        <li>
-          <strong>Data Science Bootcamp</strong> – Odinschool (2025)<br/>
-          Certificate ID: ODIN1003177<br/>
-          <em>Covered:</em> SQL, Power BI, Python, Statistics, ML basics<br/>
-          <img src="assets/odin_certificate.jpg" alt="Odinschool Certificate" style="max-width: 400px;">
-        </li>
+      <li>
+       <strong>Data Science Bootcamp</strong> – Odinschool (2025)<br/>
+        Certificate ID: <code>ODIN1003177</code><br/>
+        <em>Covered:</em> SQL, Power BI, Python, Statistics, ML basics<br/>
+        <img src="assets/odin_certificate.jpg" alt="Odinschool Certificate" style="max-width: 400px;"><br/>
+       🔗 <a href="https://go.odinschool.com/verify-certificate" target="_blank">
+       Verify Certificate
+       </a> — enter certificate ID: <strong>ODIN1003177</strong>
+      </li>
         <li>
           <strong>SQL (5-Star Badge)</strong> – HackerRank (2025)<br/>
           Recognized for SQL proficiency with a 5-star badge<br/>
