--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <strong>SQL (5-Star Badge)</strong> – HackerRank (2025)<br/>
           Recognized for SQL proficiency with a 5-star badge<br/>
           <a href="https://www.hackerrank.com/profile/nikhilcaptain4" target="_blank">🔗 View Badge on HackerRank</a><br/>
-          <img src="assets/sql_badge.png" alt="HackerRank SQL Badge" style="max-width: 300px;">
+          <img src="assets/sql_badge.jpg" alt="HackerRank SQL Badge" style="max-width: 300px;">
         </li>
       </ul>
     </section>
