--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@ body {
   font-family: 'Segoe UI', sans-serif;
   margin: 0;
   padding: 0;
-  background: linear-gradient(120deg, #f3f4f6, #e5e7eb);
-  color: #333;
+  background-color: #0d1117; /* deep GitHub-style dark */
+  color: #e5e7eb;
   line-height: 1.6;
+}
+a {
+  color: #60a5fa;
+}
+a:hover {
+  color: #facc15;
 }
     header {
       background-color: #1f2937;
@@ -30,9 +36,10 @@ body {
       text-decoration: none;
       font-weight: 500;
     }
-    nav a:hover {
-      color: #facc15;
-    }
+nav a:hover {
+  color: #facc15;
+  text-shadow: 0 0 5px rgba(250, 204, 21, 0.8);
+}
     .container {
       max-width: 1000px;
       margin: auto;
@@ -44,11 +51,28 @@ body {
     h2 {
       color: #1f2937;
     }
-    .project-card img {
-      width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-      margin-bottom: 1rem;
+.project-card {
+  background-color: #1f2937; /* dark card background */
+  color: #e5e7eb;
+  border-radius: 12px;
+  padding: 1.5rem;
+  box-shadow: 0 0 12px rgba(255, 255, 255, 0.05);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.project-card:hover {
+  border: 1px solid #facc15;
+  transform: translateY(-6px);
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+}
+.project-card h3 {
+  margin-top: 0;
+  color: #facc15;
+}
+.project-card img {
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 0 12px rgba(255,255,255,0.05);
+  margin-bottom: 1rem;
     }
     .btn {
       display: inline-block;
@@ -59,12 +83,13 @@ body {
       text-decoration: none;
       border-radius: 5px;
     }
-    footer {
-      text-align: center;
-      padding: 2rem;
-      background-color: #1f2937;
-      color: white;
-    }
+footer {
+  text-align: center;
+  padding: 2rem;
+  background-color: #111827;
+  color: #e5e7eb;
+  box-shadow: 0 -4px 12px rgba(0,0,0,0.4);
+}
     ul {
       padding-left: 1.2rem;
     }
@@ -89,7 +114,7 @@ body {
 </style>
 </head>
 <body>
-
+ <div id="tsparticles"></div>
 <header style="position: relative; overflow: hidden;">
   <!-- Background Gradient -->
   <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;
@@ -176,5 +201,38 @@ body {
   <footer>
     <p>© 2025 Nikhil Chavan. All rights reserved.</p>
   </footer>
+  <!-- tsParticles Library -->
+<script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
+<script>
+tsParticles.load("tsparticles", {
+  fullScreen: { enable: true, zIndex: -1 },
+  background: { color: "#0d1117" }, // deep dark background
+  particles: {
+    number: { value: 80, density: { enable: true, area: 800 } },
+    color: { value: "#ffffff" },
+    links: {
+      enable: true,
+      distance: 150,
+      color: "#ffffff",
+      opacity: 0.4,
+      width: 1
+    },
+    move: { enable: true, speed: 1, outModes: { default: "bounce" } },
+    shape: { type: "circle" },
+    opacity: { value: 0.5 },
+    size: { value: { min: 1, max: 3 } }
+  },
+  interactivity: {
+    events: {
+      onHover: { enable: true, mode: "repulse" },
+      onClick: { enable: true, mode: "push" }
+    },
+    modes: {
+      repulse: { distance: 100 },
+      push: { quantity: 4 }
+    }
+  }
+});
+</script>
 </body>
 </html>
