--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@ nav a:hover {
     section {
       margin-bottom: 3rem;
     }
-    h2 {
-      color: #1f2937;
-    }
+h2 {
+  color: #facc15; /* bright yellow */
+  text-shadow: 0 0 8px rgba(250, 204, 21, 0.6);
+  font-weight: 600;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
 .project-card {
   background-color: #1f2937; /* dark card background */
   color: #e5e7eb;
