--- a/index.html
+++ b/index.html
@@ -121,14 +121,39 @@ footer {
  <div id="tsparticles"></div>
 <header style="position: relative; overflow: hidden;">
   <!-- Background Gradient -->
-  <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-              background: linear-gradient(-45deg, #facc15, #60a5fa, #f472b6, #34d399);
-              background-size: 600% 600%;
-              animation: gradientBG 12s ease infinite;
-              z-index: 0;"></div>
-
+<div style="
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: 
+    linear-gradient(-45deg, #0f172a, #1e293b, #334155, #0d9488),
+    url('assets/overlay.png');
+  background-size: 600% 600%, cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: overlay;
+  animation: gradientBG 12s ease infinite;
+  z-index: 0;
+  opacity: 0.9;
+"></div>
   <!-- Content Layer -->
-  <div style="position: relative; z-index: 1; display: flex; align-items: center; justify-content: center; gap: 1rem; flex-wrap: wrap; padding: 3rem 1rem;">
+  <div style="
+  position: relative;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  padding: 3rem 1rem;
+  background: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(12px);
+  border-radius: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  box-shadow: 0 0 20px rgba(255,255,255,0.05);
+  margin: 2rem auto;
+  max-width: 800px;
+">
     <img src="assets/profile.jpg" alt="Profile Photo" style="
       width: 120px;
       height: 120px;
