--- a/coffee.html
+++ b/coffee.html
@@ -96,21 +96,23 @@
   Dive into the fully interactive Power BI report below. Click the fullscreen icon 🔳 to explore filters, KPIs, and insights in detail.
 </p>
 
-<!-- GIF demo -->
-<img src="assets/Coffeeshop.gif" alt="Coffee Shop Dashboard Demo GIF" style="border-radius: 10px; width: 100%; margin-bottom: 1rem; box-shadow: 0 0 12px rgba(255,255,255,0.08);" />
+<h2 style="color: #facc15;">📊 Dashboard Preview</h2>
 
-<!-- Embedded Power BI report -->
-<div class="report-wrapper">
-  <iframe 
-    title="Coffee Shop Sales Dashboard"
-    width="100%" 
-    height="600" 
-    src="https://app.powerbi.com/reportEmbed?reportId=fdf6203e-0c11-4532-9314-b1ec6b93b7ef&appId=92a2f8ff-cc12-4feb-acc6-59ba0c792829&autoAuth=true&ctid=e69af0f5-e703-4fdb-8a25-2d2a0d593c77" 
-    frameborder="0" 
-    allowFullScreen="true">
-  </iframe>
-</div>
+<!-- GIF preview -->
+<img src="assets/Coffeeshop.gif" alt="Coffee Shop Dashboard GIF" style="border-radius: 10px; width: 100%; margin-bottom: 1rem; box-shadow: 0 0 12px rgba(255,255,255,0.08);" />
 
+<!-- Screenshots (optional) -->
+<img src="assets/Coffee1.jpg" alt="Coffee Screenshot 1" style="border-radius: 10px; width: 100%; margin-bottom: 1rem;" />
+<img src="assets/Coffee2.jpg" alt="Coffee Screenshot 2" style="border-radius: 10px; width: 100%; margin-bottom: 1rem;" />
+<img src="assets/Coffee3.jpg" alt="Coffee Screenshot 3" style="border-radius: 10px; width: 100%; margin-bottom: 1.5rem;" />
+
+<!-- Dashboard access button -->
+<a href="https://app.powerbi.com/reportEmbed?reportId=fdf6203e-0c11-4532-9314-b1ec6b93b7ef&appId=92a2f8ff-cc12-4feb-acc6-59ba0c792829&autoAuth=true&ctid=e69af0f5-e703-4fdb-8a25-2d2a0d593c77"
+   target="_blank"
+   class="btn"
+   style="display: inline-block; background-color: #3b82f6; color: white; padding: 0.75rem 1.5rem; border-radius: 8px; font-weight: 600; text-decoration: none; box-shadow: 0 0 10px rgba(91, 176, 255, 0.5);">
+   🔗 View Dashboard (Power BI Access Required)
+</a>
 
     <hr>
 
