--- a/pizza.html
+++ b/pizza.html
@@ -85,11 +85,23 @@
 
     <hr>
 
-    <h2>📊 Dashboard Preview</h2>
-    <img src="assets/Pizza.gif" alt="Pizza Sales Dashboard GIF">
-    <img src="assets/Pizza1.png" alt="Pizza Sales Screenshot 1">
-    <img src="assets/Pizza2.png" alt="Pizza Sales Screenshot 2">
-    <hr>
+<h2 style="color: #facc15;">📊 Dashboard Preview</h2>
+
+<!-- GIF preview -->
+<img src="Screenshots/PIZZA.gif" alt="Pizza Sales Dashboard GIF" style="border-radius: 10px; width: 100%; margin-bottom: 1rem; box-shadow: 0 0 12px rgba(255,255,255,0.08);" />
+
+<!-- Screenshots -->
+<img src="Screenshots/pizza1.png" alt="Pizza Screenshot 1" style="border-radius: 10px; width: 100%; margin-bottom: 1rem;" />
+<img src="Screenshots/Pizza2.png" alt="Pizza Screenshot 2" style="border-radius: 10px; width: 100%; margin-bottom: 1.5rem;" />
+
+<!-- Button for Power BI users -->
+<a href="https://app.powerbi.com/reportEmbed?reportId=08089b7c-012c-4902-9beb-cb3d49876381&appId=5fe91805-1a90-4e2c-ae69-744906077568&autoAuth=true&ctid=e69af0f5-e703-4fdb-8a25-2d2a0d593c77"
+   target="_blank" 
+   class="btn"
+   style="display: inline-block; background-color: #3b82f6; color: white; padding: 0.75rem 1.5rem; border-radius: 8px; font-weight: 600; text-decoration: none; box-shadow: 0 0 10px rgba(91, 176, 255, 0.5);">
+   🔗 View Dashboard (Power BI Access Required)
+</a>
+
 
     <h2>📈 KPIs</h2>
     <ul>
