--- a/projects.html
+++ b/projects.html
@@ -106,6 +106,15 @@
         <a href="coffee.html" class="btn">View Project</a>
       </div>
 
+
+        <!-- Bank Churn Project -->
+  <div class="project-card">
+    <img src="assets/BankChurn.gif" alt="Bank Churn Dashboard GIF">
+    <h3>🏦 Bank Customer Churn Analysis</h3>
+    <p>Analyzed churn trends across customer demographics using Power BI to drive actionable retention insights.</p>
+    <a href="bank.html" class="btn">View Project</a>
+  </div>
+
       <!-- Add more project cards below as needed -->
 
     </div>
