--- a/bank.html
+++ b/bank.html
@@ -17,10 +17,23 @@ Use this responsive HTML snippet to match your Coffee page style:
   <p>This report examines customer churn in a bank, using Power BI to model, analyze, and visualise churn-driving factors.</p>
 
   <hr>
-  <h2>📊 Dashboard Preview</h2>
-  <img src="assets/BankChurn.gif" alt="Bank Churn Dashboard GIF">
-  <img src="assets/Bank1.png" alt="Bank Churn Screenshot 1">
-  <img src="assets/Bank2.png" alt="Bank Churn Screenshot 2">
+<h2 style="color: #facc15;">📊 Dashboard Preview</h2>
+
+<!-- GIF preview -->
+<img src="assets/BankChurn.gif" alt="Bank Churn Dashboard GIF" style="border-radius: 10px; width: 100%; margin-bottom: 1rem; box-shadow: 0 0 12px rgba(255,255,255,0.08);" />
+
+<!-- Screenshots (optional) -->
+<img src="assets/Bank1.png" alt="Bank Churn Screenshot 1" style="border-radius: 10px; width: 100%; margin-bottom: 1rem;" />
+<img src="assets/Bank2.png" alt="Bank Churn Screenshot 2" style="border-radius: 10px; width: 100%; margin-bottom: 1.5rem;" />
+
+<!-- Power BI access button -->
+<a href="https://app.powerbi.com/reportEmbed?reportId=409a0020-f3a9-418b-94db-61e464ac1bd8&appId=d22fc67a-c388-4da5-8a04-ee4d937c9785&autoAuth=true&ctid=e69af0f5-e703-4fdb-8a25-2d2a0d593c77"
+   target="_blank"
+   class="btn"
+   style="display: inline-block; background-color: #3b82f6; color: white; padding: 0.75rem 1.5rem; border-radius: 8px; font-weight: 600; text-decoration: none; box-shadow: 0 0 10px rgba(91, 176, 255, 0.5);">
+   🔗 View Dashboard (Power BI Access Required)
+</a>
+
 
   <hr>
   <h2>📈 Insights</h2>
