--- a/projects.html
+++ b/projects.html
@@ -9,197 +9,214 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
+      background: transparent;
+      color: #fff;
     }
+
     header {
-      background-color: #1f2937;
+      background-color: rgba(31, 41, 55, 0.9);
       color: white;
       padding: 2rem;
       text-align: center;
+      position: relative;
+      z-index: 2;
     }
+
     nav {
       text-align: center;
-      background: #111827;
+      background: rgba(17, 24, 39, 0.9);
       padding: 1rem;
+      position: relative;
+      z-index: 2;
     }
+
     nav a {
       color: #d1d5db;
       margin: 0 1rem;
       text-decoration: none;
       font-weight: 500;
     }
+
     nav a:hover {
       color: #facc15;
     }
+
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      top: 0;
+      left: 0;
+      background-color: #0f172a;
+    }
+
+    #projects {
+      position: relative;
+      z-index: 1;
+      background: transparent;
+      padding: 4rem 2rem;
+    }
+
     .container {
       max-width: 1200px;
       margin: auto;
       padding: 2rem;
     }
+
+    .section-title {
+      text-align: center;
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+      color: #ffda77;
+    }
+
+    .filter-buttons {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .filter-btn {
+      background: transparent;
+      border: 2px solid #ffda77;
+      color: #ffda77;
+      padding: 10px 16px;
+      margin: 0 5px;
+      border-radius: 25px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: all 0.3s ease;
+    }
+
+    .filter-btn:hover,
+    .filter-btn.active {
+      background: #ffda77;
+      color: #000;
+    }
+
     .project-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 2rem;
     }
+
     .project-card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      background: rgba(31, 31, 31, 0.85);
       padding: 1.5rem;
-      transition: transform 0.3s ease;
+      border-radius: 15px;
+      text-align: center;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      opacity: 0;
+      transform: translateY(50px);
+      animation: fadeInUp 0.8s forwards;
     }
-    .project-card:hover {
-      transform: translateY(-5px);
-    }
+
+    .project-card:nth-child(2) { animation-delay: 0.2s; }
+    .project-card:nth-child(3) { animation-delay: 0.4s; }
+
     .project-card img {
       width: 100%;
       border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
       margin-bottom: 1rem;
     }
+
     .project-card h3 {
-      margin-top: 0;
-      color: #1f2937;
+      color: #ffda77;
+      font-size: 1.5rem;
     }
+
+    .project-card p {
+      color: #ccc;
+    }
+
     .btn {
       display: inline-block;
       margin-top: 1rem;
       padding: 10px 20px;
-      background-color: #1f2937;
-      color: white;
+      background-color: #ffda77;
+      color: #000;
       text-decoration: none;
       border-radius: 5px;
+      font-weight: bold;
     }
-    #particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  top: 0;
-  left: 0;
-  background-color: #0f172a; /* optional: dark background fallback */
-}
 
-#projects {
-  position: relative;
-  z-index: 1;
-}
-    /* ---------- New Projects Section Styles (Dark + Filters + Animations) ---------- */
-  #projects {
-    background: #0f0f0f;
-    padding: 4rem 2rem;
-    color: #fff;
-    position: relative;
-    overflow: hidden;
-  }
-
-  .section-title {
-    text-align: center;
-    font-size: 2.5rem;
-    margin-bottom: 2rem;
-    color: #ffda77;
-  }
-
-  .filter-buttons {
-    text-align: center;
-    margin-bottom: 2rem;
-  }
-
-  .filter-btn {
-    background: transparent;
-    border: 2px solid #ffda77;
-    color: #ffda77;
-    padding: 10px 16px;
-    margin: 0 5px;
-    border-radius: 25px;
-    cursor: pointer;
-    font-weight: bold;
-    transition: all 0.3s ease;
-  }
-
-  .filter-btn:hover,
-  .filter-btn.active {
-    background: #ffda77;
-    color: #000;
-  }
-
-  .project-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
-  }
-
-  .project-card {
-    background: #1f1f1f;
-    padding: 1.5rem;
-    border-radius: 15px;
-    text-align: center;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.4);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    opacity: 0;
-    transform: translateY(50px);
-    animation: fadeInUp 0.8s forwards;
-  }
-
-  .project-card:nth-child(2) {
-    animation-delay: 0.2s;
-  }
-  .project-card:nth-child(3) {
-    animation-delay: 0.4s;
-  }
-
-  .project-card img {
-    width: 100%;
-    border-radius: 10px;
-    margin-bottom: 1rem;
-  }
-
-  .project-card h3 {
-    color: #ffda77;
-    font-size: 1.5rem;
-  }
-
-  .project-card p {
-    color: #ccc;
-  }
-
-  .project-card .btn {
-    background-color: #ffda77;
-    color: #000;
-    font-weight: bold;
-    border: none;
-  }
-
-  @keyframes fadeInUp {
-    to {
-      opacity: 1;
-      transform: translateY(0);
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
-  }
-</style>
- 
+
+    /* Modal Styling */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.85);
+      padding-top: 60px;
+    }
+
+    .modal-content {
+      background-color: #1f1f1f;
+      margin: auto;
+      padding: 2rem;
+      border: 1px solid #888;
+      width: 90%;
+      max-width: 800px;
+      border-radius: 12px;
+      color: #fff;
+      text-align: center;
+    }
+
+    .modal-content img {
+      width: 100%;
+      max-height: 400px;
+      object-fit: contain;
+      border-radius: 8px;
+      margin-bottom: 1rem;
+    }
+
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: #fff;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
 
-  <header>
-    <h1>📁 My Projects</h1>
-    <p>A collection of data analysis projects using Power BI, SQL, and Python</p>
-  </header>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="#resume">Resume</a>
-    <a href="#contact">Contact</a>
-  </nav>
 <div id="particles-js"></div>
 
- <section id="projects">
+<header>
+  <h1>📁 My Projects</h1>
+  <p>A collection of data analysis projects using Power BI, SQL, and Python</p>
+</header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="projects.html">Projects</a>
+  <a href="#resume">Resume</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section id="projects">
   <div class="container">
     <h2 class="section-title">🚀 My Projects</h2>
 
-    <!-- Filter Buttons -->
     <div class="filter-buttons">
       <button class="filter-btn" data-filter="all">All</button>
       <button class="filter-btn" data-filter="powerbi">Power BI</button>
@@ -207,51 +224,46 @@
       <button class="filter-btn" data-filter="python">Python</button>
     </div>
 
-    <!-- Project Cards Grid -->
-    <div class="projects-grid">
+    <div class="project-grid">
 
-      <!-- Pizza Project -->
       <div class="project-card powerbi sql"
         data-title="Pizza Sales Analysis"
         data-desc="Power BI dashboard exploring pizza orders, revenue, and top-selling products using SQL."
         data-img="assets/Pizza.gif"
         data-github="https://github.com/yourname/pizza-sales"
         data-live="pizza.html">
-        <img src="assets/Pizza.gif" alt="Pizza Sales Project GIF">
+        <img src="assets/Pizza.gif" alt="Pizza Sales Project">
         <h3>🍕 Pizza Sales Analysis</h3>
         <p>Power BI | SQL</p>
       </div>
 
-      <!-- Coffee Shop Project -->
       <div class="project-card powerbi sql"
         data-title="Coffee Shop Sales Analysis"
         data-desc="SQL and Power BI dashboard showing KPIs, growth, and customer trends in a coffee shop."
         data-img="assets/Coffeeshop.gif"
         data-github="https://github.com/yourname/coffee-shop"
         data-live="coffee.html">
-        <img src="assets/Coffeeshop.gif" alt="Coffee Shop Project GIF">
+        <img src="assets/Coffeeshop.gif" alt="Coffee Shop Project">
         <h3>☕ Coffee Shop Sales Analysis</h3>
         <p>Power BI | SQL</p>
       </div>
 
-      <!-- Bank Churn Project -->
       <div class="project-card powerbi"
         data-title="Bank Customer Churn Analysis"
         data-desc="Analyzed churn trends across customer demographics using Power BI to drive actionable retention insights."
         data-img="assets/BankChurn.gif"
         data-github="https://github.com/yourname/bank-churn"
         data-live="bank.html">
-        <img src="assets/BankChurn.gif" alt="Bank Churn Dashboard GIF">
+        <img src="assets/BankChurn.gif" alt="Bank Churn Project">
         <h3>🏦 Bank Churn Analysis</h3>
         <p>Power BI</p>
       </div>
 
-      <!-- Add more projects similarly -->
     </div>
   </div>
 </section>
 
-<!-- Modal Popup -->
+<!-- Modal -->
 <div id="projectModal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
@@ -262,28 +274,16 @@
     <a id="modalLive" href="#" target="_blank">🌐 Live Project</a>
   </div>
 </div>
+
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
   particlesJS("particles-js", {
     "particles": {
-      "number": {
-        "value": 80,
-        "density": { "enable": true, "value_area": 800 }
-      },
+      "number": { "value": 80, "density": { "enable": true, "value_area": 800 }},
       "color": { "value": "#ffda77" },
-      "shape": {
-        "type": "circle",
-        "stroke": { "width": 0, "color": "#000000" }
-      },
-      "opacity": {
-        "value": 0.3,
-        "random": true,
-        "anim": { "enable": false }
-      },
-      "size": {
-        "value": 3,
-        "random": true
-      },
+      "shape": { "type": "circle" },
+      "opacity": { "value": 0.3, "random": true },
+      "size": { "value": 3, "random": true },
       "line_linked": {
         "enable": true,
         "distance": 120,
@@ -297,8 +297,7 @@
         "direction": "none",
         "random": false,
         "straight": false,
-        "out_mode": "out",
-        "bounce": false
+        "out_mode": "out"
       }
     },
     "interactivity": {
@@ -307,12 +306,31 @@
         "onclick": { "enable": true, "mode": "push" }
       },
       "modes": {
-        "grab": { "distance": 140, "line_linked": { "opacity": 0.5 } },
+        "grab": { "distance": 140, "line_linked": { "opacity": 0.5 }},
         "push": { "particles_nb": 4 }
       }
     },
     "retina_detect": true
   });
+
+  // Modal Logic
+  const cards = document.querySelectorAll('.project-card');
+  const modal = document.getElementById('projectModal');
+  const closeBtn = modal.querySelector('.close');
+
+  cards.forEach(card => {
+    card.addEventListener('click', () => {
+      document.getElementById('modalTitle').innerText = card.dataset.title;
+      document.getElementById('modalDesc').innerText = card.dataset.desc;
+      document.getElementById('modalImage').src = card.dataset.img;
+      document.getElementById('modalGitHub').href = card.dataset.github;
+      document.getElementById('modalLive').href = card.dataset.live;
+      modal.style.display = 'block';
+    });
+  });
+
+  closeBtn.onclick = () => modal.style.display = 'none';
+  window.onclick = e => { if (e.target == modal) modal.style.display = 'none'; };
 </script>
 
 </body>
